[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }


